--- a/gb/22/9/11/n13822706.md
+++ b/gb/22/9/11/n13822706.md
@@ -1,74 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>加台湾同乡会选出2022年加台湾社区贡献奖</h2>
-
 <h6></h6>
 <hr>
-<p>【大纪元2022年09月12日讯】<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E5%8F%B0%E6%B9%BE%E5%90%8C%E4%B9%A1%E4%BC%9A.md#1">加拿大台湾同乡会</a>为鼓励台湾人对社区贡献服务，希望让更多人看到这些为我们社区尽心尽力、不求回报的人，特推选出8名 “2022年度加拿大<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E7%A4%BE%E5%8C%BA%E8%B4%A1%E7%8C%AE%E5%A5%96.md#1">台湾社区贡献奖</a>”，并致赠认证状与纪念品。</p>
-<p>“2022年度加拿大<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E7%A4%BE%E5%8C%BA%E8%B4%A1%E7%8C%AE%E5%A5%96.md#1">台湾社区贡献奖</a>”名单如下:</p>
+<p>【大纪元2022年09月12日讯】加拿大台湾同乡会为鼓励台湾人对社区贡献服务，希望让更多人看到这些为我们社区尽心尽力、不求回报的人，特推选出8名 “2022年度加拿大台湾社区贡献奖”，并致赠认证状与纪念品。</p>
+<p>“2022年度加拿大台湾社区贡献奖”名单如下:</p>
 <p>吴文义与陈秀娥伉俪 (Victoria, B.C.) 担任慈济义工二十多年，为大型灾难发起街上募款活动。为2004年培德中华文化语言学校创始人之一，组织筹画此非营利机构，强调品德教育与文化传承。号召乡亲在彩虹厨房为低收入人士制作餐点，出钱出力，热诚奉献。热心帮助新移民，关照老移民。</p>
-<figure id="attachment_13822709" aria-describedby="caption-attachment-13822709" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13822709-16752510643974-e1662924983420.jpg"><img class="size-full wp-image-13822709" src="https://i.epochtimes.com/assets/uploads/2022/09/id13822709-16752510643974-e1662924983420.jpg" alt="图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”。（加拿大台湾同乡会提供）" width="600" b="375" /></a><figcaption id="caption-attachment-13822709" class="wp-caption-text">图：<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E5%8F%B0%E6%B9%BE%E5%90%8C%E4%B9%A1%E4%BC%9A.md#1">加拿大台湾同乡会</a>为推选出 “2022年度加拿大台湾社区贡献奖”，图为获奖者吴文义与陈秀娥伉俪。（加拿大台湾同乡会提供）</figcaption></figure>
+<figure id="attachment_13822709" aria-describedby="caption-attachment-13822709" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13822709-16752510643974-e1662924983420.jpg"><img loading="lazy" decoding="async" class="size-full wp-image-13822709" src="https://i.epochtimes.com/assets/uploads/2022/09/id13822709-16752510643974-e1662924983420.jpg" alt="图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”。（加拿大台湾同乡会提供）" width="600" b="375" /></a><figcaption id="caption-attachment-13822709" class="wp-caption-text">图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”，图为获奖者吴文义与陈秀娥伉俪。（加拿大台湾同乡会提供）</figcaption></figure>
 <p>吴景裕医师 (Toronto, O.N.) 台语文学作家，笔名陈雷，作品多元丰富，有诗、散文、小说、戏剧、翻译、及评论等等。对台湾语文运动、台语文学和台湾社区有很多的贡献，保存并积极推广台语的文学与语言。</p>
-<figure id="attachment_13822710" aria-describedby="caption-attachment-13822710" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13822710-16752517834815-e1662924992847.jpg"><img class="size-full wp-image-13822710" src="https://i.epochtimes.com/assets/uploads/2022/09/id13822710-16752517834815-e1662924992847.jpg" alt="图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”。（加拿大台湾同乡会提供）" width="600" b="338" /></a><figcaption id="caption-attachment-13822710" class="wp-caption-text">图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”，图为获奖者吴景裕医师。（加拿大台湾同乡会提供）</figcaption></figure>
-<p>林美丽（Montréal, Québec）长期热诚<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%8D%E5%8A%A1%E7%A4%BE%E5%8C%BA.md#1">服务社区</a>，热心协助他人、提拔后进、筹办活动、支持国家，致力提高台湾在加拿大的能见度。曾任梦特娄台湾同乡会会长和加拿大台湾同乡会会长，近30年的侨界服务经验，出钱出力、凝聚乡亲的向心力。</p>
-<figure id="attachment_13822711" aria-describedby="caption-attachment-13822711" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13822711-16752524576318-e1662925002513.jpg"><img class="size-full wp-image-13822711" src="https://i.epochtimes.com/assets/uploads/2022/09/id13822711-16752524576318-e1662925002513.jpg" alt="图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”。（加拿大台湾同乡会提供）" width="600" b="292" /></a><figcaption id="caption-attachment-13822711" class="wp-caption-text">图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”，图为获奖者林美丽女士。（加拿大台湾同乡会提供）</figcaption></figure>
+<figure id="attachment_13822710" aria-describedby="caption-attachment-13822710" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13822710-16752517834815-e1662924992847.jpg"><img loading="lazy" decoding="async" class="size-full wp-image-13822710" src="https://i.epochtimes.com/assets/uploads/2022/09/id13822710-16752517834815-e1662924992847.jpg" alt="图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”。（加拿大台湾同乡会提供）" width="600" b="338" /></a><figcaption id="caption-attachment-13822710" class="wp-caption-text">图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”，图为获奖者吴景裕医师。（加拿大台湾同乡会提供）</figcaption></figure>
+<p>林美丽（Montréal, Québec）长期热诚服务社区，热心协助他人、提拔后进、筹办活动、支持国家，致力提高台湾在加拿大的能见度。曾任梦特娄台湾同乡会会长和加拿大台湾同乡会会长，近30年的侨界服务经验，出钱出力、凝聚乡亲的向心力。</p>
+<figure id="attachment_13822711" aria-describedby="caption-attachment-13822711" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13822711-16752524576318-e1662925002513.jpg"><img loading="lazy" decoding="async" class="size-full wp-image-13822711" src="https://i.epochtimes.com/assets/uploads/2022/09/id13822711-16752524576318-e1662925002513.jpg" alt="图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”。（加拿大台湾同乡会提供）" width="600" b="292" /></a><figcaption id="caption-attachment-13822711" class="wp-caption-text">图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”，图为获奖者林美丽女士。（加拿大台湾同乡会提供）</figcaption></figure>
 <p>施兴国与廖纯如伉俪 (Vancouver B.C.) 他们本着温和敦厚的心，长期奉献社区，更与热心乡亲共创台加文化协会，除了服务台湾乡亲与联系新旧台侨的情谊外，每年举办逾五百场的活动，堪称海外最蓬勃的一个台侨中心。一年一度主办的“台湾文化节”，节目长达两夜三天，更是温哥华市民有口皆碑的少数族裔大盛会。</p>
-<figure id="attachment_13822712" aria-describedby="caption-attachment-13822712" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13822712-16752529614635-e1662925031718.jpg"><img class="size-full wp-image-13822712" src="https://i.epochtimes.com/assets/uploads/2022/09/id13822712-16752529614635-e1662925031718.jpg" alt="图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”。（加拿大台湾同乡会提供）" width="600" b="335" /></a><figcaption id="caption-attachment-13822712" class="wp-caption-text">图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”，图为获奖者施兴国廖纯如伉俪。（加拿大台湾同乡会提供）</figcaption></figure>
+<figure id="attachment_13822712" aria-describedby="caption-attachment-13822712" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13822712-16752529614635-e1662925031718.jpg"><img loading="lazy" decoding="async" class="size-full wp-image-13822712" src="https://i.epochtimes.com/assets/uploads/2022/09/id13822712-16752529614635-e1662925031718.jpg" alt="图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”。（加拿大台湾同乡会提供）" width="600" b="335" /></a><figcaption id="caption-attachment-13822712" class="wp-caption-text">图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”，图为获奖者施兴国廖纯如伉俪。（加拿大台湾同乡会提供）</figcaption></figure>
 <p>叶国基 (Tonronto, O.N.) 积极从事海外台湾人运动,包括UN, HO for Taiwan,积极将台湾推向国际。17岁起每年寒暑假至深山部落做医疗与公共卫生服务, 20岁时参与无数的社会运动, 30年间摄下万张珍贵影像, 见证那个时代台湾正在开始改革及转型,以及政治人权价值观改变的年代。积极推广台语文学，和世界各地台侨领袖筹备成立“世界台湾人大会”。</p>
-<figure id="attachment_13822713" aria-describedby="caption-attachment-13822713" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13822713-16752535975657-e1662925043975.jpg"><img class="size-full wp-image-13822713" src="https://i.epochtimes.com/assets/uploads/2022/09/id13822713-16752535975657-e1662925043975.jpg" alt="图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”。（加拿大台湾同乡会提供）" width="600" b="480" /></a><figcaption id="caption-attachment-13822713" class="wp-caption-text">图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”，图为获奖者叶国基先生。（加拿大台湾同乡会提供）</figcaption></figure>
+<figure id="attachment_13822713" aria-describedby="caption-attachment-13822713" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13822713-16752535975657-e1662925043975.jpg"><img loading="lazy" decoding="async" class="size-full wp-image-13822713" src="https://i.epochtimes.com/assets/uploads/2022/09/id13822713-16752535975657-e1662925043975.jpg" alt="图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”。（加拿大台湾同乡会提供）" width="600" b="480" /></a><figcaption id="caption-attachment-13822713" class="wp-caption-text">图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”，图为获奖者叶国基先生。（加拿大台湾同乡会提供）</figcaption></figure>
 <p>廖淑媛女士 (Toronto O.N.) 荣获2019年荣获加拿大多元文化部安大略亚裔协会杰出亚裔人士奖。曾任多伦多台湾客家同乡会会长，举办了多项重大活动，推广客家文化和语言。现为多伦多“欢乐玩偶”剧团创会成员之一，常以分享加拿大价值观和服务回馈加拿大多元社会为题材，深受台湾社区欢迎。</p>
-<figure id="attachment_13822708" aria-describedby="caption-attachment-13822708" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13822708-16752543664817-e1662924968349.jpg"><img class="size-full wp-image-13822708" src="https://i.epochtimes.com/assets/uploads/2022/09/id13822708-16752543664817-e1662924968349.jpg" alt="图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”。（加拿大台湾同乡会提供）" width="600" b="396" /></a><figcaption id="caption-attachment-13822708" class="wp-caption-text">图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”，图为获奖者廖淑媛女士。（加拿大台湾同乡会提供）</figcaption></figure>
+<figure id="attachment_13822708" aria-describedby="caption-attachment-13822708" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13822708-16752543664817-e1662924968349.jpg"><img loading="lazy" decoding="async" class="size-full wp-image-13822708" src="https://i.epochtimes.com/assets/uploads/2022/09/id13822708-16752543664817-e1662924968349.jpg" alt="图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”。（加拿大台湾同乡会提供）" width="600" b="396" /></a><figcaption id="caption-attachment-13822708" class="wp-caption-text">图：加拿大台湾同乡会为推选出 “2022年度加拿大台湾社区贡献奖”，图为获奖者廖淑媛女士。（加拿大台湾同乡会提供）</figcaption></figure>
 <p>史迈克牧师 Michael Stainton (Tonronto, O.N.) 作为加拿大的牧师、曾服务台湾原住民社区12年，对台湾社会及原住民族群有相当的贡献。加拿大台湾人权协会会长, 约克大学亚洲研究中心( YCAR)的退休伙伴。2000年为了促进加拿大对马偕的历史记忆与认可. 组织了加拿大马偕委员会, 2022年热心于举办和参与各种马偕来台150周年纪念活动。</p>
 <p>林雪娥女士 已故 (Ottawa ON) 曾发起“台湾美食节西门购物中心”义卖。为低收入游民提供发放营养餐点，展现高度的爱心。2004年主动发起筹集资金，援助印尼海啸受害者。参加反中国日益恐吓的示威活动，为自己的理念发出抗议的声音，并持续心系台湾，展现对台湾的支持。</p>
 <p>加台会这个活动希望让更多人看到这些在加拿大长期为台湾社区服务，默默耕耘、增加台湾的可见度、为社区与社会做出很大贡献的人；希望借此鼓励乡亲们继续努力，一起回馈社区与回报社会。</p>
 <p>责任编辑：谢玉心</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/6/28/n9330130.md#1">加拿大最杰出移民奖?3华人获殊荣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/9/27/n12433764.md#1">邱丽莲新书发布 首次展示台侨的加国贡献</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/11/29/n12583137.md#1">第16届云林文化艺术奖107人获奖 创历届新高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/9/13/n13228918.md#1">加台湾同乡会推选今年杰出台裔加人奖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/21/n13978258.md#1">温哥华至纳奈莫客轮将于今夏开通</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/21/n13978252.md#1">温哥华住宅市场正在回归卖方市场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/21/n13978249.md#1">卑诗省府颁新规保障糖尿病药物供应稳定</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/21/n13978234.md#1">温哥华市中心写字楼和零售业地产复苏慢</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/21/n13978233.md#1">本拿比4月份租金上涨 15% 至 26%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/21/n13978219.md#1">温哥华港人声援“香港47人初选案”民主人士</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/6/28/n9330130.md#1">加拿大最杰出移民奖?3华人获殊荣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/9/27/n12433764.md#1">邱丽莲新书发布 首次展示台侨的加国贡献</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/11/29/n12583137.md#1">第16届云林文化艺术奖107人获奖 创历届新高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/9/13/n13228918.md#1">加台湾同乡会推选今年杰出台裔加人奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289959.md#1">列治文民间团体举办讲座探讨毒品预防策略</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289319.md#1">温哥华高端公寓现降价潮</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289304.md#1">素里市警11月底取代骑警  省府同意拨款2.5亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289298.md#1">Costco将开设南素里分店</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289296.md#1">卑诗海域发生6.4级地震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289291.md#1">民调：卑诗省新民主党支持率领先保守党2个百分点</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/9/n10470479.md#1" target="_blank">林辉：写信赞成毛退位的陈铭枢之结局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/4/n8065341.md#1" target="_blank">我和孩子经历的神话（1）</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/31/n10101897.md#1" target="_blank">袁斌：农民运动与中共暴行暴政</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/10/23/n8423584.md#1" target="_blank">屡遭拘禁摧残16年 妇坚修法轮功神奇复原</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976615.md#1">【未解之谜】这条河干涸了 末日就会到来？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13971175.md#1">【天道有知】天知道！改邪归正为何儿子反遭祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973650.md#1">关公托梦的神迹  改写命运的对联</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973255.md#1">从彼得兔到兔儿爷，一路陪伴，危难救助</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/13/n13971971.md#1">联耳三兔 跨越时空的传奇图腾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13978646.md#1">【未解之谜】古代开颅手术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13979094.md#1">【时事金扫描】俄战机炸了自己城市 北京三奇观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13979250.md#1">【新唐人大视野】“白纸运动”亲历者揭内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/21/n13978340.md#1">岳山：中南海恐祸起萧墙 蔡奇推“保习”制度化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976688.md#1">“农管”砍树拔菜抓鸡 舆论翻车：大白又来了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/20/n13977160.md#1">武汉父子传播疫情真相恐被抓 儿逃亡寻庇护</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/21/n13978574.md#1">安以轩丈夫陈荣炼一审被判刑14年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976767.md#1">周润发跑步新造型抢镜 吴君如跟跑直喊紧张</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/20/n13977611.md#1">汤唯受访坦言不懂一名词 事后发文获赞超可爱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13978650.md#1">台湾大胃王小慧 赴日本挑战世界级比赛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/20/n13977724.md#1">扶老携幼返港拍广告 39岁钟嘉欣宣布封肚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975017.md#1">研究：新型Omega-3油有望改善糖尿病眼部病变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967491.md#1">研究：一疗法让抑郁减少4至6成 效果远超药物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/20/n13977210.md#1">药品的有效日期有多重要？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/21/n13977907.md#1">日本黄金周海外旅游预约排行 台北跃居第2</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13974909.md#1">改善青少年睡眠 防止3C喧宾夺主 从家庭做起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/11/n13822706.htm">加台湾同乡会选出2022年加台湾社区贡献奖</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/9/11/n13822706.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/22/9/11/n13822706.htm">加台湾同乡会选出2022年加台湾社区贡献奖</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/9/11/n13822706.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
